--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,22 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
   } */
+
+  .logout-button {
+    background-color: #ff4d4f;
+    color: white;
+    border: none;
+    padding: 8px 16px;
+    cursor: pointer;
+    font-size: 14px;
+    border-radius: 4px;
+    margin-left: auto;
+  }
+  
+  .logout-button:hover {
+    background-color: #d9363e;
+  }
+  
   
   #root {
     max-width: 1280px;
@@ -305,6 +321,48 @@ body {
   .filters input[type="number"] {
     max-width: 150px; /* Max width for inputs */
   }
+
+
+  .register-page, .login-page {
+    width: 100%;
+    max-width: 400px;
+    margin: 0 auto;
+    text-align: center;
+  }
+  
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  
+  input {
+    padding: 8px;
+    font-size: 16px;
+  }
+  
+  /* .loginbutton {
+    padding: 10px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .loginbutton:hover {
+    background-color: #0056b3;
+  } */
+  
+  .error {
+    color: red;
+  }
+  
+  .link {
+    color: #007bff;
+    cursor: pointer;
+    text-decoration: underline;
+  }
+  
   
   
   
